Updated highlight area

--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-1">
-          <button class="btn btn-primary" id="highlight">Highlight Text</button>
+        <div class="col-md-2">
+          <button class="btn btn-primary" id="highlight-btn">Highlight Text</button>
+          <div class="error">No words to highlight!</div>
         </div>
       </div>
     </div>
