Added ability to create custom text to highlight
Added a preview section and a textarea where you can add your own
custom text in place of the dummy lorem ipsum text currently available

--- a/index.html
+++ b/index.html
@@ -45,6 +45,18 @@
           <div id="error" class="error">No words to highlight!</div>
         </div>
       </div>
+      <br>
+      <div class="row">
+        <div class="col-md-6">
+          <textarea id="custom-text" class="form-control"></textarea>
+          <button class="btn btn-success" id="add-custom">Add Custom Text</button>
+        </div>
+        <div class="col-md-6">
+          <p class="preview">
+            
+          </p>
+        </div>
+      </div>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/highlighter.js"></script>
