--- a/index.html
+++ b/index.html
@@ -52,9 +52,7 @@
           <button class="btn btn-success" id="add-custom">Add Custom Text</button>
         </div>
         <div class="col-md-6">
-          <p class="preview">
-            
-          </p>
+          <p class="preview"></p>
         </div>
       </div>
     </div>
